# AIMON

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  FRAMEWORK_DESIGN.md  IMPLEMENTATION_SUMMARY.md  README.md  alerts_log.json  doctutorials_monitor.py  pyproject.toml
aimon/: __init__.py  framework_api.py
aimon/cli/: __init__.py  main.py
aimon/connectors/: __init__.py  base.py  google_connector.py  google_search_connector.py  reddit_connector.py  telegram_connector.py  telegram_discovery_connector.py  torrent_connector.py  torrent_search_connector.py
aimon/core/: __init__.py  base_module.py  config_manager.py  event_bus.py  execution_engine.py  module_registry.py  plugin_engine.py  runtime.py  service_container.py
aimon/fingerprint/: __init__.py  audio_fingerprint_engine.py  audio_fingerprinter.py  engine.py  video_fingerprint_engine.py  video_fingerprinter.py
aimon/intelligence/: __init__.py  leak_network_mapper.py  relationship_builder.py  risk_engine.py
aimon/modules/: __init__.py  alerts.py  crawler.py  discovery.py  intelligence.py  leak_signal_module.py  network_mapper_module.py  telegram_discovery_module.py  verification_module.py
aimon/monitor/: __init__.py  brand_monitor.py
aimon/observability/: __init__.py  health.py  metrics.py  prometheus_metrics.py
aimon/storage/: __init__.py  base.py  database_storage.py  file_storage.py  memory_storage.py  neo4j_storage.py  postgres_storage.py  redis_storage.py
aimon/sync/: __init__.py  sync_api.py
aimon_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dashboard/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: EventStream.tsx  Framework3D.tsx  MetricsCharts.tsx  ModuleStatus.tsx  Navbar.tsx  ThreatTable.tsx
dashboard/lib/: api.ts  socket.ts
dashboard/styles/: globals.css
docs/: ARCHITECTURE.md  PLUGINS.md  QUICKSTART.md  use_cases.md
examples/: __init__.py  basic_monitoring.py  custom_connector.py  custom_module.py  demo_leak_monitor.py  leak_monitor.py  plugin_example.py  sync_example.py
tests/: __init__.py  conftest.py  test_cli.py  test_connectors_real.py  test_crawler.py  test_database_storage.py  test_discovery_layer.py  test_doctutorials_monitor.py  test_event_pipeline.py  test_fingerprint.py  test_framework_core.py  test_module_lifecycle.py  test_modules.py  test_network_intelligence.py  test_performance.py  test_real_monitoring_pipeline.py  test_risk_engine.py  test_runtime_startup.py  test_storage_connectors.py  test_sync_api.py  test_validation_report.py  test_verification_layer.py
