[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimon-framework"
version = "1.1.0"
description = "AIMON: AI Monitoring Framework - Enterprise-grade distributed system for detecting leaked digital assets"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Alokeshwar Goud", email = "alokeshwargoud@users.noreply.github.com"}
]
keywords = ["monitoring", "leak-detection", "distributed-systems", "framework", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Log Analysis",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    # Discovery & Network Intelligence Layer
    "httpx[http2]>=0.27",
    "selectolax>=0.3",
    "networkx>=3.0",
    # Verification Layer
    "rapidfuzz>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
storage-postgres = ["asyncpg>=0.29.0"]
fingerprint = [
    "opencv-python-headless>=4.8.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "imagehash>=4.3",
    "Pillow>=10.0",
    "scipy>=1.11",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
telegram = ["telethon>=1.34"]
neo4j = ["neo4j>=5.0", "networkx>=3.0"]
postgres = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29"]
redis = ["redis>=4.6"]
monitoring = ["prometheus-client>=0.19"]
all = [
    "asyncpg>=0.29.0",
    "opencv-python-headless>=4.8.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "imagehash>=4.3",
    "Pillow>=10.0",
    "scipy>=1.11",
    "telethon>=1.34",
    "neo4j>=5.0",
    "networkx>=3.0",
    "rapidfuzz>=3.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=4.6",
    "prometheus-client>=0.19",
]

[project.urls]
Homepage = "https://github.com/ALOKESHWARGOUD/AIMON"
Documentation = "https://github.com/ALOKESHWARGOUD/AIMON/tree/main/docs"
Repository = "https://github.com/ALOKESHWARGOUD/AIMON"
Issues = "https://github.com/ALOKESHWARGOUD/AIMON/issues"

[project.scripts]
aimon = "aimon.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["aimon*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=aimon --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["aimon"]

[tool.ruff]
line-length = 100
target-version = "py39"
